alerting/gateway-components/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-route
  namespace: monitoring
spec:
  parentRefs:
  - name: default-gateway
    namespace: gateway-system
  hostnames:
  - alertmanager.prakriti.website
  rules:
  - backendRefs:
    - name: monitoring-kube-prometheus-alertmanager
      port: 9093
