alerting/gateway-components/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
  - name: default-gateway
    namespace: gateway-system
  hostnames:
  - prometheus.prakriti.website
  rules:
  - backendRefs:
    - name: monitoring-kube-prometheus-prometheus
      port: 9090
